# SentiLib

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
SentiLib/: images.py  images_dependencies.py  multimodal.py  multimodal_dependencies.py  ontology.py  text.py  text_preloaded.py
SentiLib/assets/: Emotional_Human_Ontology.owl  Meta_learner.clf  fusion_model.pt
SentiLib/image_utils/: processor.py
SentiLib/image_utils/checkpoints/: thresholds_test.npy  thresholds_validation.npy
SentiLib/image_utils/configs/: embracenet_f.json  embracenet_i.json  embracenet_plus.json
SentiLib/image_utils/models/: YOLOv3.py  basic_HRnet.py  context_net.py  face_net.py  fusion_model.py  skeleton_net.py
SentiLib/image_utils/models/utils/: YOLOmodels.py  YOLOparse_config.py  YOLOutils.py  componets.py  graph.py  hrmodules.py  hrnet.py
SentiLib/image_utils/utils/: dataset.py  mat2py.py  traineval.py
