[metadata]
name = SentiLib
version = 1.0
author = Wilfredo Graterol
author_email = wgraterol64@gmail.com
description = Emotion recognition in images and text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WGraterol64/SentiLib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True